--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   "author": "Hardeep Singh",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
