--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,9 @@
   "keywords": [],
   "author": "Hardeep Singh",
   "license": "ISC",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
