--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.8.11",
     "random-key-generator": "^1.2.3"
   }
